SERVER-66236 Always return UNSHARDED description on uninitialised cluster