src/mongo/db/s/collection_sharding_runtime.cpp
@@ -128,14 +128,16 @@ ScopedCollectionFilter CollectionShardingRuntime::getOwnershipFilter(
 
 ScopedCollectionDescription CollectionShardingRuntime::getCollectionDescription(
     OperationContext* opCtx) {
-    auto& oss = OperationShardingState::get(opCtx);
-
     // If the server has been started with --shardsvr, but hasn't been added to a cluster we should
-    // consider all collections as unsharded. Also, return unsharded if no shard version or db
-    // version is present on the context.
-    if (!OperationShardingState::isComingFromRouter(opCtx)) {
+    // consider all collections as unsharded
+    if (!ShardingState::get(opCtx)->enabled())
         return {kUnshardedCollection};
-    }
+
+    // Present the collection as unsharded to internal or direct commands against shards
+    if (!OperationShardingState::isComingFromRouter(opCtx))
+        return {kUnshardedCollection};
+
+    auto& oss = OperationShardingState::get(opCtx);
 
     auto optMetadata = _getCurrentMetadataIfKnown(boost::none);
     const auto receivedShardVersion{oss.getShardVersion(_nss)};
@@ -335,7 +337,8 @@ CollectionShardingRuntime::_getMetadataWithVersionCheckAt(
     OperationContext* opCtx,
     const boost::optional<mongo::LogicalTime>& atClusterTime,
     bool supportNonVersionedOperations) {
-
+    // If the server has been started with --shardsvr, but hasn't been added to a cluster we should
+    // consider all collections as unsharded
     if (!ShardingState::get(opCtx)->enabled())
         return kUnshardedCollection;
 
